<resources>
    <string name="app_name">TickOff</string>
    <string name="habits">Habits</string>
    <string name="mood">Mood</string>
    <string name="settings">Settings</string>
    <string name="Stats">Stats</string>
    <string name="this_is_habit_tracker">This is Habit Tracker</string>
    <string name="this_is_mood_journal">This is Mood Journal</string>
    <string name="this_is_settings">This is Settings</string>
    <string name="this_is_statistics">This is Statistics</string>
    <string name="my_daily_habits">My Daily Habits</string>
    <string name="add_habit">add_habit\n</string>
    <string name="edit">edit</string>
    <string name="delete">delete\n</string>
    <string name="today_i_have">Today, I have\n</string>
    <string name="enter_habit_name">Enter habit name</string>
    <string name="add_new_habit">Add New Habit\n</string>
    <string name="add">ADD\n</string>
    <string name="cancel">CANCEL</string>
    <string name="my_mood_journal">My Mood Journal</string>
    <string name="today_i_am">Today, I feel...</string>
    <string name="add_mood">Add\n</string>
    <string name="add_a_note_optional">Add a note (optional)</string>
    <string name="add_new_mood">Add New Mood</string>
    <string name="excited">🤩 Excited</string>
    <string name="happy">😊 Happy</string>
    <string name="neutral">😐 Neutral</string>
    <string name="bad">☹️ Bad</string>
    <string name="angry">😡 Angry</string>
    <string name="sad">😢 Sad</string>
    <string name="hydration_reminder">Hydration Reminder</string>
    <string name="reminder">Reminder</string>
    <string name="todo">TODO</string>
    <string name="interval">Interval</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="passcode_lock">Passcode Lock</string>
    <string name="vibration_on_tap">Vibration on Tap</string>
    <string name="achievement_sound">Achievement Sound</string>
    <string name="language">Language</string>
    <string name="mood_trend_past_7_days">Mood Trend (Past 7 Days)</string>
    <string name="average_mood">Average Mood: 😊</string>
    <string name="habit_completion_0">Habit Completion: 0%</string>
    <string name="today_s_overview">Today\'s Overview</string>
    <string name="my_progress">My Progress</string>
    <string name="habit_name">Habit Name</string>
    <string name="netural">😐 Netural</string>
    <string name="my_note">My Note</string>
    <string name="date_and_time">Date and Time</string>
    <string name="tickoff">TickOff</string>
    <string name="_0">0%</string>
    <string name="today_s_habit_progress">Today\'s Habit Progress</string>
    <string name="keep_going_you_re_doing_great">Keep going, you’re doing great! 🌟</string>
    <string name="tuesday_07_october">Tuesday, 07 October</string>
    <string name="view_previous_moods">View Previous Moods</string>
    <string name="select_your_mood">Select Your Mood</string>
    <string name="excited1">🤩 Excited</string>
    <string name="happy1">😊 Happy</string>
    <string name="bad1">☹️ Bad</string>
    <string name="neutral1">😐 Neutral</string>
    <string name="angry1">😡 Angry</string>
    <string name="sad1">😢 Sad</string>
    <string name="add_a_note_optional1">Add a note (optional)</string>
    <string name="cancel1">Cancel</string>
    <string name="save">Save</string>
</resources>